Fix avatar upload releated issues
